--- a/client/views/partials/ldView.html
+++ b/client/views/partials/ldView.html
@@ -80,209 +80,200 @@
 
 
         <div id="tabContent">
-            <div class="span3 bc clearfix offset5 lt">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
+            <div class="levelBox">
+                <div class="actBox">
+                    <span class="actId">1</span>
+                    <h6 class="actName">Activity number one in the sequence</h6>
+                </div>
+
             </div>
-            <div class="vLine posV-4"></div>
-            <div class="span3 bc clearfix offset5 lt">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
+             <div class="levelBox">
+            <div class="groupBox4">
+                <div class="groupName">Group Name</div>
+                <div class="clearfix"></div>
+                <div>
+                    <div class="actBox">
+                        <span class="actId">1</span>
+                        <h6 class="actName">Activity number one in the sequence</h6>
+                    </div>
+                    <div class="actBox">
+                        <span class="actId">1</span>
+                        <h6 class="actName">Activity number one in the sequence</h6>
+                    </div>
+                    <div class="actBox">
+                        <span class="actId">1</span>
+                        <h6 class="actName">Activity number one in the sequence</h6>
+                    </div>
+                    <div class="actBox">
+                        <span class="actId">1</span>
+                        <h6 class="actName">Activity number one in the sequence</h6>
+                    </div>
+
+                </div>
+                <div>
+                    <div class="actBox">
+                        <span class="actId">1</span>
+                        <h6 class="actName">Activity number one in the sequence</h6>
+                    </div>
+                    <div class="actBox">
+                        <span class="actId">1</span>
+                        <h6 class="actName">Activity number one in the sequence</h6>
+                    </div>
+                    <div class="actBox">
+                        <span class="actId">1</span>
+                        <h6 class="actName">Activity number one in the sequence</h6>
+                    </div>
+
+                </div>
+            </div>
+                 </div>
+            <div class="levelBox">
+            <div class="groupBox1">
+                <div class="groupName">Group Name</div>
+                <div class="clearfix"></div>
+                <div>
+                    <div class="actBox">
+                        <span class="actId">1</span>
+                        <h6 class="actName">Activity number one in the sequence</h6>
+                    </div>
+                </div>
+                <div>
+                    <div class="actBox">
+                        <span class="actId">1</span>
+                        <h6 class="actName">Activity number one in the sequence</h6>
+                    </div>
+
+                </div>
             </div>
 
-            <div class="dlLine2 pos2-3"></div>
-            <div class="drLine2 pos2"></div>
-            <div class="span3 bc clear offset3 lt ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="span3  bc  ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="vLine posV-3"></div>
-            <div class="vLine posV"></div>
+            <div class="groupBox1">
+                <div class="groupName">Group Name</div>
+                <div class="clearfix"></div>
+                <div>
+                    <div class="actBox">
+                        <span class="actId">1</span>
+                        <h6 class="actName">Activity number one in the sequence</h6>
+                    </div>
+                </div>
+                <div>
+                    <div class="actBox">
+                        <span class="actId">1</span>
+                        <h6 class="actName">Activity number one in the sequence</h6>
+                    </div>
 
+                </div>
+            </div>
+            <div class="groupBox1">
+                <div class="groupName">Group Name</div>
+                <div class="clearfix"></div>
+                <div>
+                    <div class="actBox">
+                        <span class="actId">1</span>
+                        <h6 class="actName">Activity number one in the sequence</h6>
+                    </div>
+                </div>
+                <div>
+                    <div class="actBox">
+                        <span class="actId">1</span>
+                        <h6 class="actName">Activity number one in the sequence</h6>
+                    </div>
 
-            <div class="span3 bc clear offset3 lt ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
+                </div>
             </div>
-            <div class="span3  bc  ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="dlLine2 pos2-2"></div>
-            <div class="drLine2 pos2"></div>
-            <div class="dlLine2 pos2"></div>
-            <div class="drLine2 pos2"></div>
-            <div class="span3 bc clear offset1 lt ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="span3  bc ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="span3  bc">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="vLine posV-2"></div>
-            <div class="vLine posV"></div>
-            <div class="vLine posV"></div>
-            <div class="span3 bc clear offset1 lt ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="span3  bc ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="span3  bc">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="dlLine2 pos2-1"></div>
-            <div class="drLine2 pos2"></div>
-            <div class="dlLine2 pos2"></div>
-            <div class="drLine2 pos2"></div>
-            <div class="dlLine2 pos2"></div>
-            <div class="drLine2 pos2"></div>
+            <div class="groupBox1">
+                <div class="groupName">Group Name</div>
+                <div class="clearfix"></div>
+                <div>
+                    <div class="actBox">
+                        <span class="actId">1</span>
+                        <h6 class="actName">Activity number one in the sequence</h6>
+                    </div>
+                </div>
+                <div>
+                    <div class="actBox">
+                        <span class="actId">1</span>
+                        <h6 class="actName">Activity number one in the sequence</h6>
+                    </div>
 
+                </div>
+            </div>
+                </div>
+            <div class="levelBox">
+            <div class="groupBox2">
+                <div class="groupName">Group Name</div>
+                <div class="clearfix"></div>
+                <div>
+                <div class="actBox">
+                    <span class="actId">1</span>
+                    <h6 class="actName">Activity number one in the sequence</h6>
+                </div>
+                <div class="actBox">
+                    <span class="actId">1</span>
+                    <h6 class="actName">Activity number one in the sequence</h6>
+                </div>
+                    </div>
 
-            <div class="span3 bc clear ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="span3  bc ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="span3  bc">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="span3 bc ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="vLine posV-1"></div>
-            <div class="vLine posV"></div>
-            <div class="vLine posV"></div>
-            <div class="vLine posV"></div>
-            <div class="span3 bc clear ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="span3  bc ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="span3  bc">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="span3 bc ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="drLine2 pos2-1"></div>
-            <div class="dlLine2 pos2"></div>
-            <div class="drLine2 pos2"></div>
-            <div class="dlLine2 pos2"></div>
-            <div class="drLine2 pos2"></div>
-            <div class="dlLine2 pos2"></div>
-            <div class="span3 bc clear offset1 lt ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="span3  bc ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="span3  bc">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="drLine2 pos2-2"></div>
-            <div class="dlLine2 pos2"></div>
-            <div class="drLine2 pos2"></div>
-            <div class="dlLine2 pos2"></div>
-            <div class="span3 bc clear offset3 lt ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="span3  bc ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="drLine2 pos2-3"></div>
-            <div class="dlLine2 pos2"></div>
-            <div class="span3 bc clear offset5 ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="dlLine3 pos3-3"></div>
-            <div class="vLine posV3"></div>
-            <div class="drLine3 pos3"></div>
+                <div>
+                    <div class="actBox">
+                        <span class="actId">1</span>
+                        <h6 class="actName">Activity number one in the sequence</h6>
+                    </div>
 
-            <div class="span3 bc clear offset1 ">
+                </div>
+            </div>
+            </div>
+            <div class="levelBox">
+                <div class="groupBox3">
+                <div class="groupName">Group Name</div>
+                <div class="clearfix"></div>
+                <div class="actBox">
+                    <span class="actId">1</span>
+                    <h6 class="actName">Activity number one in the sequence</h6>
+                </div>
+                <div class="actBox">
+                    <span class="actId">1</span>
+                    <h6 class="actName">Activity number one in the sequence</h6>
+                </div> <div class="actBox">
                 <span class="actId">1</span>
                 <h6 class="actName">Activity number one in the sequence</h6>
             </div>
-            <div class="span3 bc ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
             </div>
-            <div class="span3 bc  ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="drLine3 pos3-3"></div>
-            <div class="vLine posV3"></div>
-            <div class="dlLine3 pos3"></div>
+                </div>
 
-            <div class="span3 bc clear offset5 ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
+                <div class="levelBox">
+                <div class="actBox">
+                    <span class="actId">1</span>
+                    <h6 class="actName">Activity number one in the sequence</h6>
+                </div>
+                <div class="actBox">
+                    <span class="actId">1</span>
+                    <h6 class="actName">Activity number one in the sequence</h6>
+                </div>
 
-            <div class="dlLine4   pos4-3"></div>
-            <div class="dlLine2 pos4"></div>
-            <div class="drLine2 pos4"></div>
-            <div class="drLine4 pos4"></div>
-
-
-
-
-            <div class="span3 bc clear ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
             </div>
-            <div class="span3  bc ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
+            <div class="">
+                <div class="actBox">
+                    <span class="actId">1</span>
+                    <h6 class="actName">Activity number one in the sequence</h6>
+                </div>
+                <div class="actBox">
+                    <span class="actId">1</span>
+                    <h6 class="actName">Activity number one in the sequence</h6>
+                </div>
+                <div class="actBox">
+                    <span class="actId">1</span>
+                    <h6 class="actName">Activity number one in the sequence</h6>
+                </div>
+                <div class="actBox">
+                    <span class="actId">1</span>
+                    <h6 class="actName">Activity number one in the sequence</h6>
+                </div>
             </div>
-            <div class="span3  bc">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="span3 bc ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-            <div class="drLine4   pos4-3"></div>
-            <div class="drLine2 pos4"></div>
-            <div class="dlLine2 pos4"></div>
-            <div class="dlLine4 pos4"></div>
-            <div class="span3 bc clear offset5 ">
-                <span class="actId">1</span>
-                <h6 class="actName">Activity number one in the sequence</h6>
-            </div>
-
             <div class="clearfix"></div>
         </div>
+
+
+
     </div>
     <!--Body content-->
 </div>
